--- a/app.component.css
+++ b/app.component.css
@@ -1,18 +1,39 @@
 body
 {
-    background-color:rgb(240, 230, 230);
+    background-color:rgb(236, 219, 219);
 }
 h1
 {
-    color:rgb(34, 178, 123);
+    color:rgb(113, 34, 178);
     text-align: center;
     font-family: 'Times New Roman';
     font-size: 48px;
 }
-h4
+a
 {
-    color:rgb(3, 3, 8);
+    text-decoration: none;
+    color:darkblue;
     font-family:'Times New Roman';
     font-size: 35px;
     margin:10px;
+}
+h4
+{
+    font-family: 'Times New Roman';
+    font-size: 30px;
+    color:teal;
+    padding:10px;
+}
+table
+{
+    border: 2px solid black;
+    border-collapse: collapse;
+    background-color: rgb(235, 224, 224);
+}
+td,th
+{
+    border:2px solid black;
+    font-size: 18px;
+    font-family: 'Times New Roman';
+    padding:2px;
 }
